[package]
name = "rust_escrow_solana"
version = "0.1.0"
edition = "2021"
author = "bergabman"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.0.13"
spl-token = { version="6.0.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="5.0.1", features = [ "no-entrypoint" ] }
borsh = "1.5.1"
bytemuck = { version = "1.18.0", features = ["derive", "const_zeroed"]}
